--- a/predictions.ipynb
+++ b/predictions.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_kg_hide-input": true,
@@ -99,9 +99,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "lead_time                         0.293123\n",
+       "total_of_special_requests         0.234658\n",
+       "required_car_parking_spaces       0.195498\n",
+       "booking_changes                   0.144381\n",
+       "previous_cancellations            0.110133\n",
+       "is_repeated_guest                 0.084793\n",
+       "agent                             0.083114\n",
+       "adults                            0.060017\n",
+       "previous_bookings_not_canceled    0.057358\n",
+       "days_in_waiting_list              0.054186\n",
+       "adr                               0.047557\n",
+       "babies                            0.032491\n",
+       "stays_in_week_nights              0.024765\n",
+       "company                           0.020642\n",
+       "arrival_date_year                 0.016660\n",
+       "arrival_date_week_number          0.008148\n",
+       "arrival_date_day_of_month         0.006130\n",
+       "children                          0.005048\n",
+       "stays_in_weekend_nights           0.001791\n",
+       "Name: is_canceled, dtype: float64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cancel_corr = full_data.corr(numeric_only = True)[\"is_canceled\"]\n",
     "cancel_corr.abs().sort_values(ascending=False)[1:]"
@@ -109,9 +139,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "lead_time                         0.293123\n",
+       "total_of_special_requests         0.234658\n",
+       "required_car_parking_spaces       0.195498\n",
+       "booking_changes                   0.144381\n",
+       "previous_cancellations            0.110133\n",
+       "is_repeated_guest                 0.084793\n",
+       "agent                             0.083114\n",
+       "adults                            0.060017\n",
+       "previous_bookings_not_canceled    0.057358\n",
+       "days_in_waiting_list              0.054186\n",
+       "adr                               0.047557\n",
+       "babies                            0.032491\n",
+       "stays_in_week_nights              0.024765\n",
+       "company                           0.020642\n",
+       "arrival_date_year                 0.016660\n",
+       "arrival_date_week_number          0.008148\n",
+       "arrival_date_day_of_month         0.006130\n",
+       "children                          0.005048\n",
+       "stays_in_weekend_nights           0.001791\n",
+       "Name: is_canceled, dtype: float64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cancel_corr = full_data.corr(numeric_only = True)[\"is_canceled\"]\n",
     "cancel_corr.abs().sort_values(ascending=False)[1:]"
@@ -130,9 +190,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "is_canceled  reservation_status\n",
+       "0            Check-Out             75166\n",
+       "1            Canceled              43017\n",
+       "             No-Show                1207\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "full_data.groupby(\"is_canceled\")[\"reservation_status\"].value_counts()"
    ]
@@ -146,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,9 +262,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DT_model cross validation accuarcy score: 0.8246 +/- 0.0016 (std) min: 0.8221, max: 0.8263\n",
+      "RF_model cross validation accuarcy score: 0.8664 +/- 0.0012 (std) min: 0.8646, max: 0.8676\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/vscode/.local/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:460: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "/home/vscode/.local/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:460: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "/home/vscode/.local/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:460: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "/home/vscode/.local/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:460: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LR_model cross validation accuarcy score: 0.7937 +/- 0.0011 (std) min: 0.7921, max: 0.7951\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/vscode/.local/lib/python3.8/site-packages/joblib/externals/loky/process_executor.py:752: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGB_model cross validation accuarcy score: 0.8456 +/- 0.0004 (std) min: 0.8451, max: 0.8461\n"
+     ]
+    }
+   ],
    "source": [
     "# define models to test:\n",
     "base_models = [(\"DT_model\", DecisionTreeClassifier(random_state=42)),\n",
@@ -238,11 +382,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "_kg_hide-input": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enhanced RF model cross validation accuarcy score: 0.8681 +/- 0.0006 (std) min: 0.8673, max: 0.869\n"
+     ]
+    }
+   ],
    "source": [
     "# Enhanced RF model with the best parameters I found:\n",
     "rf_model_enh = RandomForestClassifier(n_estimators=160,\n",
